--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author:
   name: Rajeev Atla
   email: rajeev@rajeevatla.com
 description: > # this means to ignore newlines until "show_excerpts:"
-  Personal website of a college freshman interested in the computational sciences.
+  Personal website of a college senior interested in the computational sciences.
 url: "https://rajeevatla.com"
 
 show_excerpts: true # set to true to show excerpts on the homepage
